- fix overflow navbar,1280 view, display flex menu

--- a/style.css
+++ b/style.css
@@ -94,6 +94,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    /*Try to use display flex*/
+    flex-direction: column;
+    justify-content: space-between;
+
     position: absolute;
     right: 24px;
     top: 24px;
@@ -324,8 +329,11 @@
     background-color: var(--white);
     margin: 6px 0;
     transition: 0.4s; */
-    position: absolute;
-    left: 0;
+
+    /* Try to use flex */
+    /* position: absolute;
+    left: 0; */
+
     height: 3px;
     width: 100%;
     background: var(--white);
@@ -341,21 +349,21 @@
     transition: .25s ease-in-out;
   }
 .bar1{
-    top: 0px;
+    /* top: 0px; */
     -webkit-transform-origin: left center;
     -moz-transform-origin: left center;
     -o-transform-origin: left center;
     transform-origin: left center;
 }
 .bar2{
-    top: 8px;
+    /* top: 8px; */
     -webkit-transform-origin: left center;
     -moz-transform-origin: left center;
     -o-transform-origin: left center;
     transform-origin: left center;
 }
 .bar3{
-    top: 16px;
+    /* top: 16px; */
   -webkit-transform-origin: left center;
   -moz-transform-origin: left center;
   -o-transform-origin: left center;
@@ -555,9 +563,6 @@ footer{
     img{
         width: 100%;
     }
-    .navbar{
-        align-items: flex-start;
-    }
     .navbar #links {
         display: block;
       }
@@ -572,6 +577,7 @@ footer{
     }
     .navbar .features{
         width: max-content;
+        height: auto; /*for not full screen*/
         margin-left: 0px;
         display: flex;
         position: relative;
@@ -581,8 +587,8 @@ footer{
     }
     .navbar{
         display: flex;
-        overflow: hidden;
-        align-items: flex-start;
+        overflow: visible;
+        align-items: flex-start; /*for visible item when not full screen*/
     }
     .dropdown-content {
         position: absolute;
@@ -628,7 +634,7 @@ footer{
 }
 
 /*Desktop View*/
-@media screen and (min-width:1440px){
+@media screen and (min-width:1280px){
     .home-content{
         display: flex;
         padding-bottom: 80px;
@@ -644,7 +650,7 @@ footer{
         max-width: var(--maxwidthcontent);
         margin: auto;
         width: 30%;
-        left: 20%;
+        left: 15%;
         /* top: 30%; */
         color: var(--white);
         text-align: left;
@@ -687,9 +693,7 @@ footer{
     img{
         width: 100%;
     }
-    .navbar{
-        align-items: flex-start;
-    }
+
     .navbar #links {
         display: block;
       }
@@ -707,19 +711,7 @@ footer{
         display: block;
     }
     .navbar .features{
-        width: max-content;
-        /* height: auto; */
-        margin-left: 185px;
-        display: flex;
-        position: relative;
-        background-color: transparent;
-        backdrop-filter: blur(0px);
-        z-index: 0;
-    }
-    .navbar{
-        display: flex;
-        overflow: hidden;
-        align-items: flex-start;
+        margin-left: 90px;
     }
     .dropdown-content {
         position: absolute;
@@ -729,12 +721,12 @@ footer{
     .features .dropdown{
         width: max-content;
         margin-right: 20px;
-        margin-top: 30px;
+        margin-top: 10px;
         /* display: inline; */
     }
     .features > a{
         width: max-content;
-        margin-top: 30px;
+        margin-top: 10px;
         margin-right: 30px;
     }
     .dropdown .dropbtn i{
@@ -759,7 +751,15 @@ footer{
     }
     
 }
+@media screen and (min-width: 1440px) {
+    .slide-content > .text{
+        left: 20%;
+    }
 
+    .navbar .features{
+        margin-left: 185px;
+    }
+}
 @media screen and (min-width:1920px){
     :root{
         --maxwidthcontent: 1280px;
